--- a/docs/index.css
+++ b/docs/index.css
@@ -37,6 +37,7 @@ test-tube {
   overflow: hidden;
   border-radius: 0 0 0.5em 0.5em;
   position: relative;
+  background: rgba(255, 255, 255, 0.1);
 }
 
 test-tube[pouring] {
