--- a/docs/index.css
+++ b/docs/index.css
@@ -4,7 +4,10 @@ body, html {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background: #333;
+  background: 
+    linear-gradient(45deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 49%, rgba(0,34,17,0.5) 50%, rgba(0,34,17,0.5) 100%),
+    linear-gradient(135deg, rgba(17,0,34,0.5) 0%, rgba(17,0,34,0.5) 49%, rgba(17,34,0,0.5) 50%, rgba(17,34,0,0.5) 100%);
+  background-size: 0.5em 0.5em;
 }
 
 body {
@@ -21,7 +24,6 @@ tube-container {
   flex-direction: row;
   justify-content: center;
   flex-wrap: wrap;
-  background: #333;
 }
 
 test-tube {
