--- a/docs/index.css
+++ b/docs/index.css
@@ -174,6 +174,14 @@ input[name="sort-level"]:focus {
   border-radius: 0;
 }
 
+.undo-button {
+  transition: color 0.4s, box-shadow 0.4s;
+}
+.undo-button.no-moves {
+  color: red;
+  box-shadow: 0 0 1em red;
+}
+
 .beat-level {
   position: fixed;
   /* display: flex; */
