--- a/docs/index.css
+++ b/docs/index.css
@@ -264,3 +264,23 @@ input[name="sort-level"]:focus {
     opacity: 0;
   }
 }
+
+footer {
+  color: white;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+}
+footer a {
+  text-decoration: none;
+  color: white;
+  display: block;
+  height: 0.5em;
+}
+footer svg {
+  height: 100%;
+  display: block;
+}
